comments and style

--- a/src/vm/DESIGNDOC.tex
+++ b/src/vm/DESIGNDOC.tex
@@ -38,12 +38,14 @@ Fabian Luna <luna1206@stanford.edu>
 >> kernel and user virtual addresses that alias a single frame, or
 >> alternatively how do you avoid the issue?
 
-Only access through user 
+Only access through user ?
 
 ---- SYNCHRONIZATION ----
 
 >> A4: When two user processes both need a new frame at the same time,
 >> how are races avoided?
+
+?
 
 ---- RATIONALE ----
 
